--- a/css/accueil.scss
+++ b/css/accueil.scss
@@ -35,7 +35,7 @@ body {
 
 h1 {
     font-size: 34px;
-    font-family: "Shrikhand", Geneva, Tahoma, sans-serif;
+    font-family: "Shrikhand", "Geneva", "Tahoma", "sans-serif";
     margin: 3% auto 1% auto;
 }
 
@@ -115,3 +115,54 @@ article {
         @include shadow-hover;
     }
 }
+
+// fonctionnement
+
+.fonctionnement {
+    margin: 10% 4% ;
+    width: 90%;
+}
+
+.list-fonc {
+    background-color: $color-background;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 10%;
+    border-radius: 25px;
+    height: 90px;
+    align-items: center;
+    position: relative;
+    margin-left: 4%;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .1);
+    .number {
+        width: 27px;
+        border: 1px solid $color-primary;
+        border-radius: 50px;
+        background-color: $color-primary;
+        color: white;
+        font-weight: 400;
+        text-align: center;
+        position: absolute;
+        left: -15px;
+    }
+    .text {
+        font-weight: 400;
+        position: absolute;
+        left: 100px;
+    }
+    i {
+        margin-right: 5%;
+        position: absolute;
+        left: 40px;
+        font-size: xx-large;
+    }
+    &:hover {
+        background-color: lighten($color: $color-primary, $amount: 34%);
+        color: $color-primary;
+        .text {
+            color: initial;
+        }
+    }
+}    
+
+
