--- a/css/accueil.scss
+++ b/css/accueil.scss
@@ -165,4 +165,133 @@ article {
     }
 }    
 
+// restaurants 
+
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: $color-background;
+    justify-content: space-between;
+    padding-bottom: 10%;
+    h2 {
+        align-self: flex-start;
+        margin-left: 4%;
+    }
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    width: 92%;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .1);
+    margin-bottom: 5%;
+    a {
+        text-decoration: none;
+        color: black;
+    }
+    img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        object-position: top;
+        border-radius: 15px 15px 0 0;
+    }
+}
+
+.card-image {
+    position: relative;
+    .band {
+        position: absolute;
+        right: 10px;
+        top: -5px;
+        background: $color-tiertary;
+        font-weight: 500;
+        color: #269D80;
+        padding: 2%;
+    }
+}
+
+.heading-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 4%;
+    margin-right: 6%;
+    position: relative;
+    h3 {
+        margin: 3% 0 1% 0;
+        font-size: 23px; 
+    }
+    .info {
+        margin: 0 0 4% 0;
+    }
+    .far {
+        margin-top: 22px;
+        position: absolute;
+        right: 1px;
+        top: 20px;
+        font-size: xx-large;
+        &:hover {
+            display: none;
+            z-index: 0;
+            cursor: pointer;
+            color: transparent;
+        }
+    }
+    .fas {
+        position: absolute;
+        margin-top: 22px;
+        right: 1px;
+        top: 20px;
+        font-size: xx-large;
+        &::before {
+            content: "\f004";
+            font-weight: bold;
+            color: transparent;
+            transform-origin: bottom;
+            transition: all 0.8s linear 0s;
+        }
+        &:hover::before {
+            display: block;
+            color: $color-primary;
+        }
+    }
+}
+
+// footer
+
+footer {
+    padding-left: 4%;
+    background: #353535;
+    color: white;
+    h2 {
+       font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
+        margin-top: 0;
+        margin-left: 4%;
+        padding-top: 7%;
+        font-size: 28px; 
+    }
+    .fas {
+        color: white;
+        padding: 0 2% 0 0;
+    }
+    a {
+        text-decoration: none;
+        color: white;
+        padding-bottom: 15%;
+    }
+}
+
+.footer {
+    display: block;
+    padding-bottom: 15%;
+    p {
+        padding: 2% 0 0 0;
+        color: white;
+        font-weight: 400;
+        margin: 1% 0 1% 4%;
+    }
+}
 
