--- a/css/accueil.css
+++ b/css/accueil.css
@@ -11,11 +11,228 @@ body {
 .loader {
   display: none;
 }
+@media only screen and (min-width: 768px) {
+  .loader .loader {
+    display: flex;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 2.5em;
+    align-items: baseline;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    z-index: -1;
+    background-color: white;
+    opacity: 50%;
+    margin: 0;
+    padding: 0;
+    animation: loader 3s forwards;
+    -webkit-animation: loader 3s forwards;
+  }
+  @keyframes loader {
+    0% {
+      opacity: 1;
+      z-index: 9999;
+    }
+    95% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+      z-index: -1;
+    }
+  }
+  @-webkit-keyframes loader {
+    0% {
+      opacity: 1;
+      z-index: 9999;
+    }
+    95% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+      z-index: -1;
+    }
+  }
+  .loader .loader p {
+    font-family: "Shrikhand", "Roboto", "Sans-serif";
+    font-size: 90px;
+    opacity: 0.7;
+  }
+  .loader .ball {
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 10%;
+    height: 1.5em;
+    border-radius: 1em;
+    text-align: center;
+    font-size: 1em;
+    padding: 0.2em;
+    width: 1.5em;
+    border-style: none;
+    margin: 1em;
+    animation: ball 0.5s infinite;
+    -webkit-animation: ball 0.5s infinite;
+  }
+  .loader #ball-1 {
+    animation: ball1 1.25s infinite;
+    -webkit-animation: ball1 1.25s infinite;
+  }
+  .loader #ball-2 {
+    animation: ball2 1.25s infinite;
+    -webkit-animation: ball2 1.25s infinite;
+  }
+  .loader #ball-3 {
+    animation: ball3 1.25s infinite;
+    -webkit-animation: ball3 1.25s infinite;
+  }
+  @keyframes ball1 {
+    0% {
+      transform: scale(1);
+    }
+    20% {
+      transform: scale(1.5);
+      background: #9356dc;
+      opacity: 0.8;
+    }
+    40% {
+      transform: scale(1);
+    }
+    60% {
+      transform: scale(1);
+    }
+    80% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @-webkit-keyframes ball1 {
+    0% {
+      transform: scale(1);
+    }
+    20% {
+      transform: scale(1.5);
+      background: #9356dc;
+      opacity: 0.8;
+    }
+    40% {
+      transform: scale(1);
+    }
+    60% {
+      transform: scale(1);
+    }
+    80% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes ball2 {
+    0% {
+      transform: scale(1);
+    }
+    20% {
+      transform: scale(1);
+    }
+    40% {
+      transform: scale(1.5) translate(0%, -25%);
+      background: #99e2d0;
+      opacity: 0.8;
+    }
+    60% {
+      transform: scale(1);
+    }
+    80% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @-webkit-keyframes ball2 {
+    0% {
+      transform: scale(1);
+    }
+    20% {
+      transform: scale(1);
+    }
+    40% {
+      transform: scale(1.5) translate(0%, -25%);
+      background: #99e2d0;
+      opacity: 0.8;
+    }
+    60% {
+      transform: scale(1);
+    }
+    80% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes ball3 {
+    0% {
+      transform: scale(1);
+    }
+    20% {
+      transform: scale(1);
+    }
+    40% {
+      transform: scale(1);
+    }
+    60% {
+      transform: scale(1.5);
+      background: #ff79da;
+      opacity: 0.8;
+    }
+    80% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @-webkit-keyframes ball3 {
+    0% {
+      transform: scale(1);
+    }
+    20% {
+      transform: scale(1);
+    }
+    40% {
+      transform: scale(1);
+    }
+    60% {
+      transform: scale(1.5);
+      background: #ff79da;
+      opacity: 0.8;
+    }
+    80% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+}
 
 h1 {
   font-size: 34px;
   font-family: "Shrikhand", "Geneva", "Tahoma", "sans-serif";
   margin: 3% auto 1% auto;
+}
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 42px;
+    font-family: "Shrikhand", Geneva, Tahoma, sans-serif;
+    margin-top: 1%;
+  }
 }
 
 h2 {
@@ -39,6 +256,12 @@ header {
   flex-direction: column;
   align-items: center;
 }
+@media only screen and (min-width: 768px) {
+  header {
+    flex-direction: column;
+    margin-bottom: 3%;
+  }
+}
 
 nav {
   display: flex;
@@ -59,6 +282,22 @@ article {
   text-align: center;
   align-items: center;
   padding-bottom: 5%;
+}
+@media only screen and (min-width: 768px) {
+  article {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    justify-content: space-evenly;
+    margin: 1% auto;
+    border-radius: 25px;
+    width: 95%;
+  }
+  article br {
+    display: none;
+  }
+  article h2 {
+    margin: 0 0 1% 0;
+  }
 }
 article p {
   margin: 0;
@@ -85,6 +324,12 @@ article a {
   box-shadow: 2px 4px 4px #9f8fac;
   opacity: 1;
 }
+@media only screen and (min-width: 768px) {
+  .degrade {
+    margin: 3% 0 1% 0;
+    width: 30%;
+  }
+}
 .degrade:hover {
   opacity: 0.8;
   cursor: pointer;
@@ -94,6 +339,20 @@ article a {
 .fonctionnement {
   margin: 10% 4%;
   width: 90%;
+}
+@media only screen and (min-width: 768px) {
+  .fonctionnement {
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-left: 3%;
+  }
+  .fonctionnement h2 {
+    margin-left: 2%;
+    margin-right: 70%;
+  }
 }
 
 .list-fonc {
@@ -107,6 +366,12 @@ article a {
   position: relative;
   margin-left: 4%;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+}
+@media only screen and (min-width: 768px) {
+  .list-fonc {
+    margin: 1% 3% 4% 0;
+    width: 30%;
+  }
 }
 .list-fonc .number {
   width: 27px;
@@ -146,9 +411,27 @@ article a {
   justify-content: space-between;
   padding-bottom: 10%;
 }
+@media only screen and (min-width: 768px) {
+  .restaurants {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 0;
+    width: 80%;
+    border-radius: 25px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 .restaurants h2 {
   align-self: flex-start;
   margin-left: 4%;
+}
+@media only screen and (min-width: 768px) {
+  .restaurants h2 {
+    margin-right: 70%;
+    margin-left: 34px;
+  }
 }
 
 .card {
@@ -158,6 +441,13 @@ article a {
   width: 92%;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
   margin-bottom: 5%;
+}
+@media only screen and (min-width: 768px) {
+  .card {
+    width: 45%;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
 .card a {
   text-decoration: none;
@@ -171,6 +461,11 @@ article a {
   -o-object-position: top;
      object-position: top;
   border-radius: 15px 15px 0 0;
+}
+@media only screen and (min-width: 768px) {
+  .card img {
+    height: 280px;
+  }
 }
 
 .card-image {
@@ -197,6 +492,11 @@ article a {
 .heading-card h3 {
   margin: 3% 0 1% 0;
   font-size: 23px;
+}
+@media only screen and (min-width: 768px) {
+  .heading-card h3 {
+    margin: 1% 0 1% 0;
+  }
 }
 .heading-card .info {
   margin: 0 0 4% 0;
@@ -238,12 +538,23 @@ footer {
   background: #353535;
   color: white;
 }
+@media only screen and (min-width: 768px) {
+  footer {
+    margin-top: 2%;
+  }
+}
 footer h2 {
   font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
   margin-top: 0;
   margin-left: 4%;
   padding-top: 7%;
   font-size: 28px;
+}
+@media only screen and (min-width: 768px) {
+  footer h2 {
+    margin-top: 0;
+    padding-top: 4%;
+  }
 }
 footer .fas {
   color: white;
@@ -258,6 +569,14 @@ footer a {
 .footer {
   display: block;
   padding-bottom: 15%;
+}
+@media only screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    padding-bottom: 5%;
+  }
 }
 .footer p {
   padding: 2% 0 0 0;
