--- a/css/accueil.scss
+++ b/css/accueil.scss
@@ -16,6 +16,8 @@ $color-background: #f6f6f6;
     background-color: lighten($color: $color, $amount: 10%);
 }
 
+//
+
 * {
     box-sizing: border-box;
 }
@@ -29,6 +31,263 @@ body {
 // loader
 .loader {
     display: none;
+    @media only screen and (min-width: 768px) {
+        .loader {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 2.5em;
+        align-items: baseline;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        z-index: -1;
+        background-color: white;
+        opacity: 50%;
+        margin: 0;
+        padding: 0;
+        animation: loader 3s forwards;
+        -webkit-animation: loader 3s forwards;
+}
+
+    @keyframes loader {
+        0% {
+            opacity: 1;
+            z-index: 9999;
+        }
+
+        95% {
+            opacity: 1;
+        }
+
+        100% {
+            opacity: 0;
+            z-index: -1;
+        }
+    }
+
+    @-webkit-keyframes loader {
+        0% {
+            opacity: 1;
+            z-index: 9999;
+        }
+
+        95% {
+            opacity: 1;
+        }
+
+        100% {
+            opacity: 0;
+            z-index: -1;
+        }
+    }
+
+    .loader p {
+        font-family: "Shrikhand", "Roboto", "Sans-serif";
+        font-size: 90px;
+        opacity: 0.7;
+    }
+
+    .ball {
+        background-color: rgb(0,0,0,0.2);
+        width: 10%;
+        height: 1.5em;
+        border-radius: 1em;
+        text-align: center;
+        font-size: 1em;
+        padding: 0.2em;
+        width: 1.5em;
+        border-style: none;
+        margin: 1em;
+        animation: ball .5s infinite ;
+        -webkit-animation: ball .5s infinite;
+    }
+
+    #ball-1 {
+        animation: ball1 1.25s infinite;
+        -webkit-animation: ball1 1.25s infinite;
+    }
+
+    #ball-2 {
+        animation: ball2 1.25s infinite;
+        -webkit-animation: ball2 1.25s infinite;
+    }
+
+    #ball-3 {
+        animation: ball3 1.25s infinite;
+        -webkit-animation: ball3 1.25s infinite;
+    }
+
+    @keyframes ball1 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1.5);
+            background: #9356dc;
+            opacity: 0.8;
+        }
+
+        40% {
+            transform: scale(1);
+        }
+
+        60% {
+            transform: scale(1);
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @-webkit-keyframes ball1 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1.5);
+            background: #9356dc;
+            opacity: 0.8;
+        }
+
+        40% {
+            transform: scale(1);
+        }
+
+        60% {
+            transform: scale(1);
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @keyframes ball2 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1.5) translate(0%,-25%);
+            background: #99e2d0;
+            opacity: 0.8;
+        }
+
+        60% {
+            transform: scale(1);
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @-webkit-keyframes ball2 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1.5) translate(0%,-25%);
+            background: #99e2d0;
+            opacity: 0.8;
+        }
+
+        60% {
+            transform: scale(1);
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @keyframes ball3 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1);
+        }
+
+        60% {
+            transform: scale(1.5);
+            background: #ff79da;
+            opacity: 0.8;
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+
+    @-webkit-keyframes ball3 {
+        0% {
+            transform: scale(1);
+        }
+
+        20% {
+            transform: scale(1);
+        }
+
+        40% {
+            transform: scale(1);
+        }
+
+        60% {
+            transform: scale(1.5);
+            background: #ff79da;
+            opacity: 0.8;
+        }
+
+        80% {
+            transform: scale(1);
+        }
+
+        100% {
+            transform: scale(1);
+        }
+    }
+    }
 }
 
 //
@@ -37,6 +296,11 @@ h1 {
     font-size: 34px;
     font-family: "Shrikhand", "Geneva", "Tahoma", "sans-serif";
     margin: 3% auto 1% auto;
+    @media only screen and (min-width: 768px) {
+        font-size: 42px;
+        font-family: "Shrikhand", Geneva, Tahoma, sans-serif;
+        margin-top: 1%;
+    }
 }
 
 h2 {
@@ -61,6 +325,10 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media only screen and (min-width: 768px) {
+        flex-direction: column;
+        margin-bottom: 3%;
+    }
 }
 
 nav {
@@ -84,7 +352,21 @@ article {
     text-align: center;
     align-items: center;
     padding-bottom: 5%;
-      p {
+    @media only screen and (min-width: 768px) {
+        padding-top: 2%;
+        padding-bottom: 2%;
+        justify-content: space-evenly;
+        margin: 1% auto;
+        border-radius: 25px;
+        width: 95%;
+        br {
+            display: none;
+        }
+        h2 {
+            margin: 0 0 1% 0;
+        }
+    }
+    p {
         margin: 0;
     }
     a {
@@ -109,6 +391,10 @@ article {
     background: linear-gradient(to top left, $color-primary, $color-secondary );
     @include box-shadow;
     opacity: 1;
+    @media only screen and (min-width: 768px) {
+        margin: 3% 0 1% 0;
+        width: 30%;
+    }
     &:hover {
         opacity: 0.8;
         cursor: pointer;
@@ -121,6 +407,18 @@ article {
 .fonctionnement {
     margin: 10% 4% ;
     width: 90%;
+    @media only screen and (min-width: 768px) {
+        width: 100%;
+        margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-left: 3%;
+        h2 {
+            margin-left: 2%;
+            margin-right: 70%;
+        }
+    }
 }
 
 .list-fonc {
@@ -134,6 +432,10 @@ article {
     position: relative;
     margin-left: 4%;
     box-shadow: 0 6px 12px rgba(0, 0, 0, .1);
+    @media only screen and (min-width: 768px) {
+        margin: 1% 3% 4% 0;
+        width: 30%;
+    }
     .number {
         width: 27px;
         border: 1px solid $color-primary;
@@ -174,9 +476,23 @@ article {
     background: $color-background;
     justify-content: space-between;
     padding-bottom: 10%;
+    @media only screen and (min-width: 768px) {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-bottom: 0;
+        width: 80%;
+        border-radius: 25px;
+        margin-left: auto;
+        margin-right: auto;
+    }
     h2 {
         align-self: flex-start;
         margin-left: 4%;
+        @media only screen and (min-width: 768px) {
+            margin-right: 70%;
+            margin-left: 34px;
+        }
     }
 }
 
@@ -187,6 +503,11 @@ article {
     width: 92%;
     box-shadow: 0 6px 12px rgba(0, 0, 0, .1);
     margin-bottom: 5%;
+    @media only screen and (min-width: 768px) {
+        width: 45%;
+        margin-right: auto;
+        margin-left: auto; 
+    }
     a {
         text-decoration: none;
         color: black;
@@ -197,6 +518,9 @@ article {
         object-fit: cover;
         object-position: top;
         border-radius: 15px 15px 0 0;
+        @media only screen and (min-width: 768px) {
+            height: 280px;
+        } 
     }
 }
 
@@ -223,6 +547,9 @@ article {
     h3 {
         margin: 3% 0 1% 0;
         font-size: 23px; 
+        @media only screen and (min-width: 768px) {
+            margin: 1% 0 1% 0;
+        }
     }
     .info {
         margin: 0 0 4% 0;
@@ -266,12 +593,19 @@ footer {
     padding-left: 4%;
     background: #353535;
     color: white;
+    @media only screen and (min-width: 768px) {
+        margin-top: 2%;
+    }
     h2 {
        font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
         margin-top: 0;
         margin-left: 4%;
         padding-top: 7%;
         font-size: 28px; 
+        @media only screen and (min-width: 768px) {
+            margin-top: 0;
+            padding-top: 4%;
+        }
     }
     .fas {
         color: white;
@@ -287,6 +621,12 @@ footer {
 .footer {
     display: block;
     padding-bottom: 15%;
+    @media only screen and (min-width: 768px) {
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        padding-bottom: 5%;
+    }
     p {
         padding: 2% 0 0 0;
         color: white;
