--- a/css/accueil.css
+++ b/css/accueil.css
@@ -355,7 +355,7 @@ article a {
   }
 }
 
-.list-fonc {
+.list {
   background-color: #f6f6f6;
   display: flex;
   justify-content: space-evenly;
@@ -368,12 +368,12 @@ article a {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 }
 @media only screen and (min-width: 768px) {
-  .list-fonc {
+  .list {
     margin: 1% 3% 4% 0;
     width: 30%;
   }
 }
-.list-fonc .number {
+.list__number {
   width: 27px;
   border: 1px solid #9356dc;
   border-radius: 50px;
@@ -384,22 +384,23 @@ article a {
   position: absolute;
   left: -15px;
 }
-.list-fonc .text {
+.list__text {
   font-weight: 400;
   position: absolute;
   left: 100px;
 }
-.list-fonc i {
+.list i {
   margin-right: 5%;
   position: absolute;
   left: 40px;
   font-size: xx-large;
 }
-.list-fonc:hover {
+.list:hover {
   background-color: #efe6fa;
   color: #9356dc;
+  cursor: pointer;
 }
-.list-fonc:hover .text {
+.list:hover .list__text {
   color: initial;
 }
 
@@ -409,7 +410,7 @@ article a {
   align-items: center;
   background: #f6f6f6;
   justify-content: space-between;
-  padding-bottom: 10%;
+  padding-bottom: 5%;
 }
 @media only screen and (min-width: 768px) {
   .restaurants {
@@ -439,8 +440,8 @@ article a {
   flex-direction: column;
   border-radius: 15px;
   width: 92%;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-  margin-bottom: 5%;
+  box-shadow: 2px 4px 4px #9f8fac;
+  margin-bottom: 8%;
 }
 @media only screen and (min-width: 768px) {
   .card {
@@ -448,6 +449,10 @@ article a {
     margin-right: auto;
     margin-left: auto;
   }
+}
+.card:hover {
+  box-shadow: 4px 6px 6px #9f8fac;
+  opacity: 0.9;
 }
 .card a {
   text-decoration: none;
