--- a/css/accueil.scss
+++ b/css/accueil.scss
@@ -421,7 +421,7 @@ article {
     }
 }
 
-.list-fonc {
+.list {
     background-color: $color-background;
     display: flex;
     justify-content: space-evenly;
@@ -436,7 +436,7 @@ article {
         margin: 1% 3% 4% 0;
         width: 30%;
     }
-    .number {
+    &__number {
         width: 27px;
         border: 1px solid $color-primary;
         border-radius: 50px;
@@ -447,7 +447,7 @@ article {
         position: absolute;
         left: -15px;
     }
-    .text {
+    &__text {
         font-weight: 400;
         position: absolute;
         left: 100px;
@@ -461,7 +461,8 @@ article {
     &:hover {
         background-color: lighten($color: $color-primary, $amount: 34%);
         color: $color-primary;
-        .text {
+        cursor: pointer;
+        .list__text {
             color: initial;
         }
     }
@@ -475,7 +476,7 @@ article {
     align-items: center;
     background: $color-background;
     justify-content: space-between;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
     @media only screen and (min-width: 768px) {
         flex-direction: row;
         flex-wrap: wrap;
@@ -501,12 +502,16 @@ article {
     flex-direction: column;
     border-radius: 15px;
     width: 92%;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, .1);
-    margin-bottom: 5%;
+    @include box-shadow;
+    margin-bottom: 8%;
     @media only screen and (min-width: 768px) {
         width: 45%;
         margin-right: auto;
         margin-left: auto; 
+    }
+    &:hover {
+        @include shadow-hover;
+        opacity: 0.9;
     }
     a {
         text-decoration: none;
