--- a/css/accueil.css
+++ b/css/accueil.css
@@ -12,7 +12,7 @@ body {
   display: none;
 }
 @media only screen and (min-width: 768px) {
-  .loader .loader {
+  .loader {
     display: flex;
     position: fixed;
     top: 50%;
@@ -23,6 +23,7 @@ body {
     width: 100%;
     height: 100%;
     justify-content: center;
+    align-items: center;
     z-index: -1;
     background-color: white;
     opacity: 50%;
@@ -57,13 +58,12 @@ body {
       z-index: -1;
     }
   }
-  .loader .loader p {
+  .loader p {
     font-family: "Shrikhand", "Roboto", "Sans-serif";
     font-size: 90px;
     opacity: 0.7;
   }
   .loader .ball {
-    background-color: rgba(0, 0, 0, 0.2);
     width: 10%;
     height: 1.5em;
     border-radius: 1em;
@@ -77,14 +77,17 @@ body {
     -webkit-animation: ball 0.5s infinite;
   }
   .loader #ball-1 {
+    background: #e4d5f6;
     animation: ball1 1.25s infinite;
     -webkit-animation: ball1 1.25s infinite;
   }
   .loader #ball-2 {
+    background: white;
     animation: ball2 1.25s infinite;
     -webkit-animation: ball2 1.25s infinite;
   }
   .loader #ball-3 {
+    background: white;
     animation: ball3 1.25s infinite;
     -webkit-animation: ball3 1.25s infinite;
   }
