--- a/css/menu.css
+++ b/css/menu.css
@@ -40,10 +40,20 @@ header {
   padding: 5%;
   align-items: center;
 }
+@media screen and (min-width: 768px) {
+  header {
+    padding-top: 4%;
+  }
+}
 header img {
   margin-left: auto;
   margin-right: auto;
   width: 60%;
+}
+@media screen and (min-width: 768px) {
+  header img {
+    width: 30%;
+  }
 }
 header .fas {
   color: black;
@@ -53,6 +63,11 @@ header .fas {
   width: 100%;
   height: 300px;
   position: relative;
+}
+@media screen and (min-width: 768px) {
+  .banner {
+    position: unset;
+  }
 }
 .banner img {
   width: 100%;
@@ -73,6 +88,20 @@ header .fas {
   background: #f6f6f6;
   margin-bottom: 0;
 }
+@media screen and (min-width: 768px) {
+  .menu {
+    width: 80%;
+    margin-top: 0;
+    border-radius: 25px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .menu {
+    width: 98%;
+    padding: 15px 0 0 0;
+    margin-top: 2%;
+  }
+}
 
 .heading-menu {
   display: flex;
@@ -81,9 +110,20 @@ header .fas {
   border-radius: 15px;
   width: 80%;
 }
+@media screen and (min-width: 768px) {
+  .heading-menu {
+    justify-content: space-between;
+    padding-top: 2%;
+  }
+}
 .heading-menu h1 {
   margin: 0 0 8% 0;
   padding-left: 4%;
+}
+@media screen and (min-width: 768px) {
+  .heading-menu h1 {
+    margin-bottom: 3%;
+  }
 }
 .heading-menu .far {
   padding-left: 11%;
@@ -93,6 +133,20 @@ header .fas {
   right: 34px;
   top: 30px;
   font-size: xx-large;
+}
+@media screen and (min-width: 768px) {
+  .heading-menu .far {
+    padding-left: 11%;
+    margin-bottom: 5%;
+    margin-top: 22px;
+    top: 1.5%;
+    right: 6%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .heading-menu .far {
+    top: 5%;
+  }
 }
 .heading-menu .far:hover {
   display: none;
@@ -106,6 +160,18 @@ header .fas {
   right: 34px;
   top: 30px;
   font-size: xx-large;
+}
+@media screen and (min-width: 768px) {
+  .heading-menu .fas {
+    margin-top: 22px;
+    right: 6%;
+    top: 1.5%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .heading-menu .fas {
+    top: 5%;
+  }
 }
 .heading-menu .fas::before {
   content: "\f004";
@@ -130,6 +196,20 @@ form {
   padding-bottom: 10%;
   width: 100%;
 }
+@media screen and (min-width: 768px) {
+  .list-card {
+    margin-left: 4%;
+    margin-right: 4%;
+    padding-bottom: 6%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .list-card {
+    width: 30%;
+    margin-right: 1%;
+    margin-left: 2%;
+  }
+}
 
 .heading-card {
   display: flex;
@@ -139,6 +219,11 @@ form {
 .heading-card h2 {
   font-weight: 100;
   margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .heading-card h2 {
+    margin-top: 0;
+  }
 }
 .heading-card .border {
   font-weight: 100;
@@ -355,6 +440,16 @@ form {
   font-weight: bold;
   font-size: 18px;
 }
+@media only screen and (min-width: 768px) {
+  .degrade {
+    margin: 5% auto 20% auto;
+  }
+}
+@media only screen and (min-width: 1100px) {
+  .degrade {
+    margin: 5% auto 30% auto;
+  }
+}
 .degrade:hover {
   opacity: 0.8;
   cursor: pointer;
@@ -366,12 +461,23 @@ footer {
   background: #353535;
   color: white;
 }
+@media only screen and (min-width: 768px) {
+  footer {
+    margin-top: 2%;
+  }
+}
 footer h2 {
   font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
   margin-top: 0;
   margin-left: 4%;
   padding-top: 7%;
   font-size: 28px;
+}
+@media only screen and (min-width: 768px) {
+  footer h2 {
+    margin-top: 0;
+    padding-top: 4%;
+  }
 }
 footer .fas {
   color: white;
@@ -386,6 +492,14 @@ footer a {
 .footer {
   display: block;
   padding-bottom: 15%;
+}
+@media only screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    padding-bottom: 5%;
+  }
 }
 .footer p {
   padding: 2% 0 0 0;
