--- a/css/menu.scss
+++ b/css/menu.scss
@@ -60,10 +60,16 @@ header {
     display: flex;
     padding: 5%;
     align-items: center;
+    @media screen and (min-width: 768px) {
+        padding-top: 4%;
+    }
     img {
         margin-left: auto;
         margin-right: auto;
         width: 60%;
+        @media screen and (min-width: 768px) {
+            width: 30%;
+        }
     }
     .fas {
         color: black;
@@ -74,6 +80,9 @@ header {
     width: 100%;
     height: 300px;
     position: relative;
+    @media screen and (min-width: 768px) {
+        position: unset;
+    }
     img {
         width: 100%;
         height: 300px;
@@ -94,6 +103,16 @@ header {
     border-radius: 25px 25px 0 0;
     background: $color-background;
     margin-bottom: 0;
+    @media screen and (min-width: 768px) {
+        width: 80%;
+        margin-top: 0;
+        border-radius: 25px;
+    }
+    @media screen and (min-width: 1100px) {
+        width: 98%;
+        padding: 15px 0 0 0;
+        margin-top: 2%;
+    }
 }
 
 .heading-menu {
@@ -102,9 +121,16 @@ header {
     padding-top: 5%;
     border-radius: 15px;
     width: 80%;
+    @media screen and (min-width: 768px) {
+        justify-content: space-between;
+        padding-top: 2%;
+    }
     h1 {
         margin: 0 0 8% 0;
         padding-left: 4%;
+        @media screen and (min-width: 768px) {
+            margin-bottom: 3%;
+        }
     }
     .far {
         padding-left: 11%;
@@ -114,6 +140,16 @@ header {
         right: 34px;
         top: 30px;
         font-size: xx-large;
+        @media screen and (min-width: 768px) {
+            padding-left: 11%;
+            margin-bottom: 5%;
+            margin-top: 22px;
+            top: 1.5%;
+            right: 6%;
+        }
+        @media screen and (min-width: 1100px) {
+            top: 5%;
+        }
         &:hover {
             display: none;
             z-index: 0;
@@ -127,6 +163,14 @@ header {
         right: 34px;
         top: 30px;
         font-size: xx-large;
+        @media screen and (min-width: 768px) {
+            margin-top: 22px;
+            right: 6%;
+            top: 1.5%; 
+        }
+        @media screen and (min-width: 1100px) {
+            top: 5%;
+        }
         &::before {
             content: "\f004";
             font-weight: bold;
@@ -151,6 +195,16 @@ form {
     flex-direction: column;
     padding-bottom: 10%;
     width: 100%;
+    @media screen and (min-width: 768px) {
+        margin-left: 4%;
+        margin-right: 4%;
+        padding-bottom: 6%;
+    }
+    @media screen and (min-width: 1100px) {
+        width: 30%;
+        margin-right: 1%;
+        margin-left: 2%;
+    }
 }
 
 .heading-card {
@@ -160,6 +214,9 @@ form {
     h2 {
         font-weight: 100;
         margin-bottom: 0;
+        @media screen and (min-width: 768px) {
+            margin-top: 0;
+        }
     }
     .border {
         font-weight: 100;
@@ -390,6 +447,12 @@ form {
     color: white;
     font-weight: bold;
     font-size: 18px;
+    @media only screen and (min-width: 768px) {
+        margin: 5% auto 20% auto;
+    }
+    @media only screen and (min-width: 1100px) {
+        margin: 5% auto 30% auto;
+    }
     &:hover {
         opacity: 0.8;
         cursor: pointer;
@@ -403,12 +466,19 @@ footer {
     padding-left: 4%;
     background: #353535;
     color: white;
+    @media only screen and (min-width: 768px) {
+        margin-top: 2%;
+    }
     h2 {
        font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
         margin-top: 0;
         margin-left: 4%;
         padding-top: 7%;
         font-size: 28px; 
+        @media only screen and (min-width: 768px) {
+            margin-top: 0;
+            padding-top: 4%;
+        }
     }
     .fas {
         color: white;
@@ -424,6 +494,12 @@ footer {
 .footer {
     display: block;
     padding-bottom: 15%;
+    @media only screen and (min-width: 768px) {
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        padding-bottom: 5%;
+    }
     p {
         padding: 2% 0 0 0;
         color: white;
