--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,65 @@
+form {
+  display: flex;
+  flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) {
+  form {
+    margin-top: 3%;
+  }
+}
+
+footer {
+  padding-left: 4%;
+  background: #353535;
+  color: white;
+}
+@media only screen and (min-width: 768px) {
+  footer {
+    margin-top: 2%;
+  }
+}
+footer h2 {
+  font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
+  margin-top: 0;
+  margin-left: 4%;
+  padding-top: 7%;
+  font-size: 28px;
+}
+@media only screen and (min-width: 768px) {
+  footer h2 {
+    margin-top: 0;
+    padding-top: 4%;
+  }
+}
+footer .fas {
+  color: white;
+  padding: 0 2% 0 0;
+}
+footer a {
+  text-decoration: none;
+  color: white;
+  padding-bottom: 15%;
+}
+
+.footer {
+  display: block;
+  padding-bottom: 15%;
+}
+@media only screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    padding-bottom: 5%;
+  }
+}
+.footer p {
+  padding: 2% 0 0 0;
+  color: white;
+  font-weight: 400;
+  margin: 1% 0 1% 4%;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -18,17 +80,31 @@ body {
 }
 
 h1 {
-  font-size: 28px;
-  font-family: "Shrikhand", Geneva, Tahoma, sans-serif;
+  font-family: "Shrikhand", "Geneva", "Tahoma", "sans-serif";
   margin: 5% auto 0 auto;
+}
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 36px;
+  }
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 25px;
+}
+@media screen and (min-width: 768px) {
+  h2 {
+    font-size: 30px;
+  }
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 24px;
+}
+@media screen and (min-width: 768px) {
+  h3 {
+    font-size: 28px;
+  }
 }
 
 p {
@@ -131,7 +207,7 @@ header .fas {
   margin-top: 22px;
   position: absolute;
   right: 34px;
-  top: 30px;
+  top: 35px;
   font-size: xx-large;
 }
 @media screen and (min-width: 768px) {
@@ -158,7 +234,7 @@ header .fas {
   position: absolute;
   margin-top: 22px;
   right: 34px;
-  top: 30px;
+  top: 35px;
   font-size: xx-large;
 }
 @media screen and (min-width: 768px) {
@@ -183,11 +259,6 @@ header .fas {
 .heading-menu .fas:hover::before {
   display: block;
   color: #9356dc;
-}
-
-form {
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .list-card {
@@ -377,6 +448,43 @@ form {
   padding-bottom: 16%;
 }
 
+.command {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  animation: slide3 2400ms linear;
+  -webkit-animation: slide3 2400ms linear;
+}
+
+.degrade {
+  border-color: transparent;
+  background: linear-gradient(to top left, #9356dc, #ff79da);
+  box-shadow: 2px 4px 4px #9f8fac;
+  opacity: 1;
+  margin: 10% auto 20% auto;
+  width: 200px;
+  height: 50px;
+  border-radius: 25px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+}
+@media only screen and (min-width: 768px) {
+  .degrade {
+    margin: 5% auto 20% auto;
+  }
+}
+@media only screen and (min-width: 1100px) {
+  .degrade {
+    margin: 5% auto 30% auto;
+  }
+}
+.degrade:hover {
+  opacity: 0.8;
+  cursor: pointer;
+  box-shadow: 4px 6px 6px #9f8fac;
+}
+
 .checkbox input[type=checkbox] {
   display: none;
 }
@@ -417,93 +525,4 @@ form {
 }
 .checkbox input[type=checkbox]:checked ~ .checked {
   display: inline-block;
-}
-
-.command {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  animation: slide3 2400ms linear;
-  -webkit-animation: slide3 2400ms linear;
-}
-
-.degrade {
-  border-color: transparent;
-  background: linear-gradient(to top left, #9356dc, #ff79da);
-  box-shadow: 2px 4px 4px #9f8fac;
-  opacity: 1;
-  margin: 10% auto 20% auto;
-  width: 200px;
-  height: 50px;
-  border-radius: 25px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-}
-@media only screen and (min-width: 768px) {
-  .degrade {
-    margin: 5% auto 20% auto;
-  }
-}
-@media only screen and (min-width: 1100px) {
-  .degrade {
-    margin: 5% auto 30% auto;
-  }
-}
-.degrade:hover {
-  opacity: 0.8;
-  cursor: pointer;
-  box-shadow: 4px 6px 6px #9f8fac;
-}
-
-footer {
-  padding-left: 4%;
-  background: #353535;
-  color: white;
-}
-@media only screen and (min-width: 768px) {
-  footer {
-    margin-top: 2%;
-  }
-}
-footer h2 {
-  font-family: "Shrikhand", "Geneva", Tahoma, sans-serif;
-  margin-top: 0;
-  margin-left: 4%;
-  padding-top: 7%;
-  font-size: 28px;
-}
-@media only screen and (min-width: 768px) {
-  footer h2 {
-    margin-top: 0;
-    padding-top: 4%;
-  }
-}
-footer .fas {
-  color: white;
-  padding: 0 2% 0 0;
-}
-footer a {
-  text-decoration: none;
-  color: white;
-  padding-bottom: 15%;
-}
-
-.footer {
-  display: block;
-  padding-bottom: 15%;
-}
-@media only screen and (min-width: 768px) {
-  .footer {
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    padding-bottom: 5%;
-  }
-}
-.footer p {
-  padding: 2% 0 0 0;
-  color: white;
-  font-weight: 400;
-  margin: 1% 0 1% 4%;
 }/*# sourceMappingURL=menu.css.map */
