--- a/css/layout/_forms.scss
+++ b/css/layout/_forms.scss
@@ -4,4 +4,7 @@ form {
     @media screen and (min-width: 768px) {
         margin-top: 3%;
     }
+    @media screen and (min-width: 1100px) {
+        margin-top: 1%;
+    }
 }
