--- a/css/menu.css
+++ b/css/menu.css
@@ -7,6 +7,11 @@ form {
     margin-top: 3%;
   }
 }
+@media screen and (min-width: 1100px) {
+  form {
+    margin-top: 1%;
+  }
+}
 
 footer {
   padding-left: 4%;
@@ -85,7 +90,7 @@ h1 {
 }
 @media screen and (min-width: 768px) {
   h1 {
-    font-size: 36px;
+    font-size: 30px;
   }
 }
 
@@ -94,12 +99,12 @@ h2 {
 }
 @media screen and (min-width: 768px) {
   h2 {
-    font-size: 30px;
+    font-size: 24px;
   }
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 22px;
 }
 @media screen and (min-width: 768px) {
   h3 {
@@ -121,6 +126,11 @@ header {
     padding-top: 4%;
   }
 }
+@media screen and (min-width: 1100px) {
+  header {
+    padding: 0 2% 0 2%;
+  }
+}
 header img {
   margin-left: auto;
   margin-right: auto;
@@ -128,11 +138,18 @@ header img {
 }
 @media screen and (min-width: 768px) {
   header img {
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1100px) {
+  header img {
     width: 30%;
+    padding: 2%;
   }
 }
 header .fas {
   color: black;
+  font-size: xx-large;
 }
 
 .banner {
@@ -195,10 +212,12 @@ header .fas {
 .heading-menu h1 {
   margin: 0 0 8% 0;
   padding-left: 4%;
+  font-size: 30px;
 }
 @media screen and (min-width: 768px) {
   .heading-menu h1 {
     margin-bottom: 3%;
+    font-size: 38px;
   }
 }
 .heading-menu .far {
@@ -290,10 +309,12 @@ header .fas {
 .heading-card h2 {
   font-weight: 100;
   margin-bottom: 0;
+  font-size: 24px;
 }
 @media screen and (min-width: 768px) {
   .heading-card h2 {
     margin-top: 0;
+    font-size: 28px;
   }
 }
 .heading-card .border {
@@ -427,6 +448,12 @@ header .fas {
   overflow: hidden;
   white-space: nowrap;
   margin: 8% 0 3% 0;
+  font-size: 22px;
+}
+@media screen and (min-width: 768px) {
+  .description-card h3 {
+    font-size: 26px;
+  }
 }
 
 .info {
