--- a/css/pages/_accueil.scss
+++ b/css/pages/_accueil.scss
@@ -46,6 +46,19 @@ header {
         flex-direction: column;
         margin-bottom: 3%;
     }
+    img {
+        margin-left: auto;
+        margin-right: auto;
+        width: 60%;
+        padding: 4%;
+        @media screen and (min-width: 768px) {
+            width: 40%;
+        }
+        @media screen and (min-width: 1100px) {
+            width: 30%;
+            padding: 2%;
+        }
+    }    
 }
 
 nav {
