--- a/css/pages/_menu.scss
+++ b/css/pages/_menu.scss
@@ -21,19 +21,19 @@ h1 {
     font-family: "Shrikhand", "Geneva", "Tahoma", "sans-serif";
     margin: 5% auto 0 auto;
     @media screen and (min-width: 768px) {
-        font-size: 36px;
+        font-size: 30px;
     }
 }
 
 h2 {
     font-size: 25px;
     @media screen and (min-width: 768px) {
-        font-size: 30px;
+        font-size: 24px;
     }
 }
 
 h3 {
-    font-size: 24px;
+    font-size: 22px;
     @media screen and (min-width: 768px) {
         font-size: 28px;
     }
@@ -52,16 +52,24 @@ header {
     @media screen and (min-width: 768px) {
         padding-top: 4%;
    }
+   @media screen and (min-width: 1100px) {
+       padding: 0 2% 0 2%;
+   }
     img {
         margin-left: auto;
         margin-right: auto;
         width: 60%;
         @media screen and (min-width: 768px) {
+            width: 40%;
+        }
+        @media screen and (min-width: 1100px) {
             width: 30%;
+            padding: 2%;
         }
     }
     .fas {
         color: black;
+        font-size: xx-large;
     }
 }
 
