--- a/css/pages/_menu-card.scss
+++ b/css/pages/_menu-card.scss
@@ -228,6 +228,9 @@
     width: 100%;
     position: relative;
     margin-top: 5%;
+    &:hover {
+        cursor: pointer;
+    }
     &:hover .price {
         right: 15%;
         transition: all 250ms linear;
@@ -265,7 +268,7 @@
         margin: 8% 0 3% 0;
         font-size: 22px;
         @media screen and (min-width: 768px) {
-            font-size: 26px;
+            font-size: 25px;
         }
     }
 }
